Workaround for cross-stack CfnConditions